<resources>
    <!--标题相关-->
    <string name="software_desc_title">软件说明</string>
    <string name="share_title">推荐有奖</string>

    <!--App name-->
    <string name="app_name">YangKe</string>

    <!--error hint-->
    <string name="network_error">无网络</string>
    <string name="network_error_desc">~网络走丢了~</string>
    <string name="no_data_title">无数据</string>
    <string name="no_data_desc">~暂时没有数据~</string>
    <string name="title_about_author">关于作者</string>

    <!--share-->
    <string name="share_award_rule">奖励规则</string>
    <string name="share_get_download">分享得 15 次下载体验</string>
    <string name="share_app">分享 APP</string>
    <string name="share_my_qr">我的分享二维码</string>
    <string name="share_click_look">点击查看</string>
    <string name="share_nothing_record">暂不支持</string>
    <string name="share_share_time">分享时间</string>
    <string name="share_share_other_person">被分享人</string>
    <string name="share_get_free">已获得免费次数0次</string>
    <string name="share_accumulative">累计分享0次</string>
    <string name="software_effect">随着互联网高速发展，21世纪已经成为了会员时代，知识付费时代。作为土生土长的伪土豪，消费则能省则省。什么腾讯、爱奇艺 VIP 视频;网易、QQ 音乐月包;花钱不存的，这辈子都不存在的。还有综艺视频，优衣库视频，琪琪泥鳅，各种小视频应有尽有…</string>
    <string name="share_cancel">分享取消</string>
    <string name="share_search_title">种子搜索器搜你想搜</string>
    <string name="share_search_description">腾讯，爱奇艺VIP，花钱不存的，搜索器搜你所搜，下你所下。还有综艺，优衣库，各种小视频！</string>
    <string name="network_no_connection">网络无法连接</string>
    <string name="long_click_save_qr_code">长按图片进行保存</string>
    <!--share dilog-->
    <string name="share_wechat_friend">朋友圈</string>
    <string name="share_wechat_buddy">微信好友</string>
    <string name="share_weibo">新浪微博</string>
    <string name="share_copy_href">复制链接</string>
</resources>