<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/share_txt_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="click"
            android:padding="16dp"
            android:text="@string/share_award_rule"
            android:textColor="#3a3a3a"
            android:textSize="13sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawablePadding="@dimen/dp8"
        android:gravity="center"
        android:text="@string/share_get_download"
        android:textColor="#2c241f"
        android:textSize="20sp"
        app:drawableTopCompat="@drawable/share_preferential"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1.5" />

        <TextView
            android:id="@+id/share_txt_share_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="7"
            android:background="@drawable/share_solid_radius8_btn"
            android:gravity="center"
            android:onClick="click"
            android:paddingTop="@dimen/dp8"
            android:paddingBottom="@dimen/dp8"
            android:text="@string/share_app"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1.5" />
    </LinearLayout>

    <TextView
        android:id="@+id/share_txt_share_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:onClick="click"
        android:padding="@dimen/dp8"
        android:text="@string/share_my_qr"
        android:textColor="#ff541f" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/share_txt_share_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/share_accumulative"
            android:textSize="13sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f5f5f5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/share_txt_free_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/share_get_free"
                android:textColor="#3a3a3a"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/share_click_look"
                android:padding="5dp"
                android:text="@string/share_click_look"
                android:textColor="#ff541f"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp10"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/share_share_other_person"
                android:textColor="#3a3a3a"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/share_share_time"
                android:textColor="#3a3a3a"
                android:textSize="13sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/sha_line_imaginary"
            android:layerType="software" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/share_nothing_record"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>
